--- a/backstory.html
+++ b/backstory.html
@@ -5,16 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hephaestus</title>
-    <link rel="stylesheet" href="style.css">
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.1/p5.js"></script>
+    <script src ="lib/p5.play.js"></script>
+    <script src = "lib/p5.sound.js"></script>
+    <script src ="backstory.js" defer></script>
 </head>
-
 <body>
-    <div class="container">
-            <div class="logo"></div>
-    </div>
-
-    <a href="game.html">Press to start game</a>
-    <a href="backstory.html">Press to view backstory</a>
     
 </body>
 </html>
